project2/test/test_11712639_05.out
Error type 7 at line 13: unmatching operands
